# cardyn

./: .prettierignore  .prettierrc  LICENSE  README.md  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js  vitest.config.ts
.github/workflows/: ci.yml
scripts/: bundle-budget.mjs  check-versions.mjs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: cpu_probe.rs  gpu_probe.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  metrics.rs  sampler.rs  tray.rs
src-tauri/src/gpu/: macos.rs  mod.rs
src/lib/: chart.ts  format.ts  metric-meta.ts  metrics.svelte.ts  types.ts
src/lib/__tests__/: chart.test.ts  format.test.ts  metric-meta.test.ts  sanity.test.ts
src/lib/components/: Detail.svelte  HistoryChart.svelte  Ring.svelte  Sparkline.svelte
src/routes/: +page.svelte
