[package]
name = "cardyn"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cardyn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-updater = "2.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
io-kit-sys = "0.5.0"
core-foundation = "0.10.1"
sysinfo = "0.39.5"

